--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="skill-grids">
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-1"></div>
-						<p>Blender</p>
+						<p>Node.js</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-2"></div>
-						<p>Photography</p>
+						<p>WebRTC</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-3"></div>
@@ -364,7 +364,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="contact-grids">
 			<div class="col-md-5 contact-left">
-				<h3>Say Hi to Me</h3>
+				
 				<div class="stripb"></div>
 				<ul>
 					<li>W. Mahadevpur </li>
