--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="banner-right">
 				<h1>I’m Anirban</h1>
 				<div class="border"></div>
-				<h2>Love to learn</h2>
+				<h2>Love-Learn-Do</h2>
 				<a href="#">DOWNLOAD MY RESUME</a>
 			</div>
 			<div class="clearfix"></div>
@@ -116,7 +116,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 		<h3>ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
-		<p>CS undergrad. I love astronomy. I love Quora. :) </p>
+		<p>CSE undergrad. I love astronomy. I love Quora. :) </p>
 		<ul>
 			<li><a class="fb" href="#"></a></li>
 			<li><a class="twit" href="#"></a></li>
