Added CV and modified index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- for-mobile-apps -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="keywords" content="Kong Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-		Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+		
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
 	<!-- js -->
@@ -70,8 +69,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div> 
 				</div>       	  
 			</div>
-			<!---start-click-drop-down-menu----->
-			        <!----start-dropdown--->
+			<!---start-click-drop-down-menu---->
+			        <!----start-dropdown-->
 			         <script type="text/javascript">
 						var $ = jQuery.noConflict();
 							$(function() {
@@ -93,7 +92,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 												
 						});
 					</script>
-			<!---//End-click-drop-down-menu----->
+			<!---//End-click-drop-down-menu---->
 			<div class="clearfix"> </div>
 		</div>
 		<div class="banner-info">
@@ -104,22 +103,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h1>I’m Anirban</h1>
 				<div class="border"></div>
 				<h2>Love-Learn-Do</h2>
-				<a href="#">DOWNLOAD MY RESUME</a>
+				<a href="contents/CV.pdf">DOWNLOAD MY RESUME</a>
 			</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
 </div>
 <!--/header-banner-->
-<!--about-->
+<!--about---->
 <div class="about text-center" id="about">
 	<div class="container">
 		<h3>ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
 		<p>CSE undergrad. I love astronomy. I love Quora. :) </p>
 		<ul>
-			<li><a class="fb" href="#"></a></li>
-			<li><a class="twit" href="#"></a></li>
+			<li><a class="fb" href="facebok.com/shikha71"></a></li>
+			<li><a class="twit" href="twitter.com/bomkyash"></a></li>
 			<li><a class="in" href="#"></a></li>
 			<li><a class="drib" href="#"></a></li>
 			<li><a class="goog" href="#"></a></li>
@@ -199,7 +198,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<img src="images/arrow.png" alt=""/>
 				<div class="edu-border">
 					<div class="edu-grid-master">
-						<h3>B.sc OF Computer Science and Engineering</h3>
+						<h3>B.sc in Computer Science and Engineering</h3>
 						<h4>Chittagong University of Engineering and Technology</h4>
 					</div>
 					<div class="edu-grid-info">
@@ -394,7 +393,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--resume-->
 <div class="resume text-center">
 	<div class="container">
-		<div class="strip text-center"><a href="#"><img src="images/down.png" alt=" "/></a></div>
+		<div class="strip text-center"><a href="contents/CV.pdf"><img src="images/down.png" alt=" "/></a></div>
 		<div class="down"><a href="#">Download My Resume</a></div>
 	</div>
 </div>
