--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="banner-info">
 			<div class="banner-left">
-				<img src="images/1.png" alt=""/>
+				<img src="images/me.png" alt=""/>
 			</div>
 			<div class="banner-right">
 				<h1>I’m Anirban</h1>
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 		<h3>ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
-		<p>CSE undergrad. I love astronomy. I love Quora. :) </p>
+		<p>Graduated from CSE. I love astronomy. I love Quora. :) </p>
 		<ul>
 			<li><a class="fb" href="facebok.com/shikha71"></a></li>
 			<li><a class="twit" href="twitter.com/bomkyash"></a></li>
