--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="skill-grids">
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-1"></div>
-						<p>Node.js</p>
+						<p>C,C++</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-2"></div>
@@ -144,7 +144,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-3"></div>
-						<p>Gimp</p>
+						<p>Python</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-4"></div>
@@ -152,7 +152,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-5"></div>
-						<p>C,C++</p>
+						<p>Node.js</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-6"></div>
@@ -281,7 +281,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="col-md-4 ser-grid">
 				<div class="ser-imageb"></div>
-				<h3>Graphic Design</h3>
+				<h3>Research on Image processing</h3>
 				<p></p>
 			</div>
 			
