--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<ul>
 			<li><a class="fb" href="facebok.com/shikha71"></a></li>
 			<li><a class="twit" href="twitter.com/bomkyash"></a></li>
-			<li><a class="in" href="#"></a></li>
-			<li><a class="drib" href="#"></a></li>
-			<li><a class="goog" href="#"></a></li>
-			<li><a class="pin" href="#"></a></li>
+			<li><a class="in" href="https://bd.linkedin.com/in/anirban-dutta-01153870"></a></li>
+			
+			<li><a class="goog" href="https://plus.google.com/u/1/+অনির্বাণদত্ত"></a></li>
+			
 		</ul>
 	</div>
 </div>
@@ -296,6 +296,75 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <!--//services-->
 
+<div class="gallery-section text-center" id="portfolio">
+	<div class="container">
+		<h3>PORTFOLIO</h3>
+		<div class="strip text-center"><img src="images/port.png" alt=" "/></div>
+		<p>I have designed and had my contirbution in following projects. All projects are hosted at: github.com/anirban93</p>
+		<div class="gallery-grids">
+			<div class="top-gallery">
+				<div class="col-md-4 gallery-grid gallery1">
+					<a href="https://github.com/anirban93/cuet_admission" class="swipebox"><img src="images/cuet_admision.png" class="img-responsive" alt="/">
+						<div class="textbox">
+							<h4>Cuet Admission</h4>
+							<p>Phonegap Application</p>
+							<div class="button"><a href="https://github.com/anirban93/cuet_admission" class="swipebox">VIEW</a></div>
+						</div>
+				</div></a>
+				<div class="col-md-4 gallery-grid gallery1">
+					<a href="https://github.com/anirban93/Hall-management" class="swipebox"><img src="images/hall_management.png" class="img-responsive" alt="/">
+						<div class="textbox">
+							<h4>Hall management</h4>
+							<p>Hall/Dorm office management Software for CUET</p>
+							<div class="button"><a href="https://github.com/anirban93/Hall-management" class="swipebox">VIEW</a></div>
+						</div>
+				</div></a>
+				<div class="col-md-4 gallery-grid gallery1">
+					<a href="https://github.com/anirban93/pro_kowshal" class="swipebox"><img src="images/pro_kow.png" class="img-responsive" alt="/">
+						<div class="textbox">
+							<h4>Pro-Kowshal</h4>
+							<p>Titanium Application</p>
+							<div class="button"><a href="https://github.com/anirban93/pro_kowshal" class="swipebox">VIEW</a></div>
+						</div>
+				</div></a>
+				<div class="col-md-4 gallery-grid gallery1">
+					<a href="https://github.com/anirban93/taxo" class="swipebox"><img src="images/taxo.png" class="img-responsive" alt="/">
+						<div class="textbox">
+							<h4>Taxo</h4>
+							<p>Tax calculation and management software for a restaurent</p>
+							<div class="button"><a href="https://github.com/anirban93/taxo" class="swipebox">VIEW</a></div>
+						</div>
+				</div></a>
+				<div class="col-md-4 gallery-grid gallery1">
+					<a href="https://github.com/anirban93/grad_RTC" class="swipebox"><img src="images/grad_RTC.png" class="img-responsive" alt="/">
+						<div class="textbox">
+							<h4>grad_RTC</h4>
+							<p>WebRTC application</p>
+							<div class="button"><a href="https://github.com/anirban93/grad_RTC" class="swipebox">VIEW</a></div>
+						</div>
+				</div></a>
+				<div class="col-md-4 gallery-grid gallery1">
+					<a href="site/index.html" class="swipebox"><img src="images/site.png" class="img-responsive" alt="/">
+						<div class="textbox">
+							<h4>Project Name</h4>
+							<p>WEB DESIGN</p>
+							<div class="button"><a href="site/index.html" class="swipebox">VIEW</a></div>
+						</div>
+				</div></a>
+				<div class="clearfix"> </div>
+			</div>
+				<link rel="stylesheet" href="css/swipebox.css">
+				<script src="js/jquery.swipebox.min.js"></script> 
+					<script type="text/javascript">
+						jQuery(function($) {
+							$(".swipebox").swipebox();
+						});
+					</script>
+		</div>
+	</div>
+</div>
+
+
 <!--process-->
 <div class="process text-center">
 	<div class="container">
@@ -394,7 +463,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="resume text-center">
 	<div class="container">
 		<div class="strip text-center"><a href="contents/CV.pdf"><img src="images/down.png" alt=" "/></a></div>
-		<div class="down"><a href="#">Download My Resume</a></div>
+		<div class="down"><a href="contents/CV.pdf">Download My Resume</a></div>
 	</div>
 </div>
 <!--//resume-->
