--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 		<h3>PORTFOLIO</h3>
 		<div class="strip text-center"><img src="images/port.png" alt=" "/></div>
-		<p>I have designed and had my contirbution in following projects. All projects are hosted at: github.com/anirban93</p>
+		<p>I have designed and had my contirbution in following projects. All projects are hosted at:  github.com/anirban93</p>
 		<div class="gallery-grids">
 			<div class="top-gallery">
 				<div class="col-md-4 gallery-grid gallery1">
@@ -346,7 +346,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4 gallery-grid gallery1">
 					<a href="site/index.html" class="swipebox"><img src="images/site.png" class="img-responsive" alt="/">
 						<div class="textbox">
-							<h4>Project Name</h4>
+							<h4>Digital Smart Engineering</h4>
 							<p>WEB DESIGN</p>
 							<div class="button"><a href="site/index.html" class="swipebox">VIEW</a></div>
 						</div>
