--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="banner-right">
 				<h1>I’m Anirban</h1>
 				<div class="border"></div>
-				<h2>Love-Learn-Do</h2>
+				<h2>Think-Learn-Code</h2>
 				<a href="contents/CV.pdf">DOWNLOAD MY RESUME</a>
 			</div>
 			<div class="clearfix"></div>
